--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,17 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/configuration_reseau"
         android:supportsRtl="true"
         android:theme="@style/Theme.TableauDeScore"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/configuration_reseau"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".InscriptionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConnexionActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
