--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TableauDeScore"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="28">
         <activity
-            android:parentActivityName=".MainActivity"
             android:name=".QRCode"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:parentActivityName=".ConnexionActivity"
             android:name=".InscriptionActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:parentActivityName=".MainActivity"
             android:name=".ConnexionActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
